--- a/MeuProjeto/package.json
+++ b/MeuProjeto/package.json
@@ -17,7 +17,9 @@
     "@angular/platform-browser": "^17.1.0",
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/router": "^17.1.0",
+    "json": "^11.0.0",
     "rxjs": "~7.8.0",
+    "server": "^1.0.38",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
