--- a/MeuProjeto/angular.json
+++ b/MeuProjeto/angular.json
@@ -49,6 +49,7 @@
               "zone.js"
             ],
             "tsConfig": "tsconfig.app.json",
+            "aot": true,
             "assets": [
               "src/favicon.ico",
               "src/assets"
