--- a/MeuProjeto/tsconfig.json
+++ b/MeuProjeto/tsconfig.json
@@ -26,6 +26,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "enableIvy": true,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
